@@ -1,5 +1,7 @@
 0.47 2022-11-22
         - Add command to generate super_client_info file. (diewald)
+        - Support 'client_file' parameter as an alternative to 'client_id'
+          and 'client_secret'. (diewald)
 
 0.46 2022-08-08
         - Increased max query length from 1000 to 4096 characters. (kupietz)
